# minigrep

./: Cargo.toml  README.md  output.txt  poem.txt  readme.md
src/: lib.rs  main.rs
