[package]
name = "rahat3062_minigrep"
version = "0.1.1"
edition = "2021"
description = "A light-weight & minimal implementation of the grep cli app."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
